Reply to comments and fix word-wrapping

--- a/static/style.css
+++ b/static/style.css
@@ -128,21 +128,27 @@
 	-moz-animation-iteration-count: 1;
 	-moz-animation-timing-function: ease-in;
 	-moz-animation-duration: 0.3s;
+	-moz-animation-delay: 0.5s;
+	-moz-animation-fill-mode: both;
 
 	-webkit-animation-name: dropHeader;
 	-webkit-animation-iteration-count: 1;
 	-webkit-animation-timing-function: ease-in;
 	-webkit-animation-duration: 0.3s;
+	-webkit-animation-delay: 0.2s;
+	-webkit-animation-fill-mode: both;
 	
 	animation-name: dropHeader;
 	animation-iteration-count: 1;
 	animation-timing-function: ease-in;
 	animation-duration: 0.3s;
+	animation-delay: 0.2s;
+	animation-fill-mode: both;
 }
 
 @-moz-keyframes dropHeader {
 	0% {
-		-moz-transform: translateY(-40px);
+		-moz-transform: translateY(-100%);
 	}	
 	100% {
 		-moz-transform: translateY(0);
@@ -150,7 +156,7 @@
 }
 @-webkit-keyframes dropHeader {
 	0% {
-		-webkit-transform: translateY(-40px);
+		-webkit-transform: translateY(-100%);
 	}
 	100% {
 	-webkit-transform: translateY(0);
@@ -159,7 +165,7 @@
 
 @keyframes dropHeader {
 	0% {
-		transform: translateY(-40px);
+		transform: translateY(-100%);
 	}
 	100% {
 		transform: translateY(0);
@@ -413,4 +419,7 @@ hr {
   background-color: #eeeeee;
   padding: .5em;
   border: 1px solid #aaaaaa;
+}
+.md {
+	word-wrap:break-word;
 }
